--- a/1.html
+++ b/1.html
@@ -11,8 +11,14 @@
 
 </head>
 
+<style>
+    h1{
+        text-align: center;
+    }
+</style>
+
 <body>
-    <h1>H1</h1>
+   <h1>hello!</h1>
     <h2>H2</h2>
     <p> This is a paragraph</p>
     <ul>
