--- a/1.html
+++ b/1.html
@@ -15,12 +15,30 @@
     h1{
         text-align: center;
     }
+
+    p1{
+        text-align: center;
+    }
+
+    body{  background-color: rgb(0, 0, 0);
+
+    }
+
+    h1{
+        background-color: rgb(130, 111, 87);
+    }
+    h1{
+        color: azure;
+    }
+
+    body{
+        color: azure;
+    }
 </style>
 
 <body>
-   <h1>hello!</h1>
-    <h2>H2</h2>
-    <p> This is a paragraph</p>
+   <h1>Etornam Adevor</h1>
+    <p1> 773-986-4998 | eadevor@hawk.iit.edu </p1>
     <ul>
         <li>Unordered List</li>
         <li></li>
